[gd_scene load_steps=43 format=2]

[ext_resource path="res://game-assets/game-scripts/player-scripts/states-scripts/spin-dash.gd" type="Script" id=1]
[ext_resource path="res://game-assets/game-scripts/player-scripts/states-scripts/on-air.gd" type="Script" id=2]
[ext_resource path="res://game-assets/game-scripts/player-scripts/states-scripts/on-ground.gd" type="Script" id=3]
[ext_resource path="res://general-objects/players-objects/characters-scene/sonic-character-object.tscn" type="PackedScene" id=4]
[ext_resource path="res://game-assets/game-scripts/player-scripts/player-state-machine.gd" type="Script" id=5]
[ext_resource path="res://game-assets/audio/sfx/spin.wav" type="AudioStream" id=6]
[ext_resource path="res://game-assets/game-scripts/player-scripts/character-vfx.gd" type="Script" id=7]
[ext_resource path="res://game-assets/audio/sfx/peel-out-charge.wav" type="AudioStream" id=8]
[ext_resource path="res://game-assets/audio/sfx/spin-dash-charge.wav" type="AudioStream" id=9]
[ext_resource path="res://game-assets/audio/sfx/spin-dash-release.wav" type="AudioStream" id=10]
[ext_resource path="res://game-assets/game-scripts/player-scripts/collision-handler.gd" type="Script" id=11]
[ext_resource path="res://game-assets/game-scripts/player-scripts/player-physics.gd" type="Script" id=12]
[ext_resource path="res://game-assets/audio/sfx/insta-shield.wav" type="AudioStream" id=13]
[ext_resource path="res://game-assets/audio/sfx/peel-out-release.wav" type="AudioStream" id=14]
[ext_resource path="res://game-assets/audio/sfx/brake.wav" type="AudioStream" id=15]
[ext_resource path="res://game-assets/game-sprites/player-sprites/VFX/insta-shield-sheet.png" type="Texture" id=16]
[ext_resource path="res://game-assets/game-scripts/player-scripts/audio-player.gd" type="Script" id=17]
[ext_resource path="res://game-assets/game-scripts/player-scripts/trail.gd" type="Script" id=18]
[ext_resource path="res://game-assets/game-sprites/player-sprites/VFX/spin-dash-dust.png" type="Texture" id=19]
[ext_resource path="res://game-assets/game-scripts/player-scripts/characters-scripts/character-values.gd" type="Script" id=20]
[ext_resource path="res://game-assets/game-scripts/player-scripts/states-scripts/damage.gd" type="Script" id=22]
[ext_resource path="res://game-assets/audio/sfx/drop-dash.wav" type="AudioStream" id=109]
[ext_resource path="res://game-assets/audio/sfx/spring-push.wav" type="AudioStream" id=120]
[ext_resource path="res://game-assets/audio/sfx/ring-catch.wav" type="AudioStream" id=131]
[ext_resource path="res://game-assets/audio/sfx/spike-hurt.wav" type="AudioStream" id=161]
[ext_resource path="res://game-assets/audio/sfx/hurt.wav" type="AudioStream" id=162]
[ext_resource path="res://game-assets/audio/sfx/lose-rings.wav" type="AudioStream" id=163]
[ext_resource path="res://game-assets/audio/sfx/hyper-ring.wav" type="AudioStream" id=164]
[ext_resource path="res://game-assets/game-scripts/player-scripts/states-scripts/suspended.gd" type="Script" id=185]
[ext_resource path="res://game-assets/audio/sfx/grab.wav" type="AudioStream" id=186]
[ext_resource path="res://general-objects/players-objects/player-camera.tscn" type="PackedScene" id=187]
[ext_resource path="res://game-assets/game-scripts/player-scripts/states-scripts/idle.gd" type="Script" id=188]
[ext_resource path="res://game-assets/game-scripts/player-scripts/states-scripts/crouch.gd" type="Script" id=189]
[ext_resource path="res://game-assets/game-scripts/player-scripts/states-scripts/look-up.gd" type="Script" id=190]
[ext_resource path="res://game-assets/game-scripts/player-scripts/states-scripts/spinning.gd" type="Script" id=191]
[ext_resource path="res://game-assets/audio/sfx/jump.wav" type="AudioStream" id=192]
[ext_resource path="res://game-assets/game-scripts/player-scripts/states-scripts/global-states.gd" type="Script" id=193]

[sub_resource type="Animation" id=1]
length = 0.3
loop = true
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.28 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 12 ]
}

[sub_resource type="Animation" id=2]
length = 0.15
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.14 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 6 ]
}

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.95, 1 )
colors = PoolColorArray( 0.00392157, 0.709804, 0.694118, 0, 0.24, 1, 0.987333, 1, 0.192157, 1, 0.980392, 0.227451 )

[sub_resource type="Resource" id=32]
script = ExtResource( 20 )
acc = 4.6875
dec = 50.0
roll_dec = 7.5
frc = 4.6875
slp = 7.5
slp_roll_up = 4.6875
slp_roll_down = 18.75
top = 460.0
top_roll = 960.0
jmp = 390.0
fall = 150.0
air = 9.375
grv = 13.125
spin_dash = true

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 3, 3 )

[node name="Player" type="KinematicBody2D" groups=["Players"]]
z_index = 1
collision_layer = 993
collision_mask = 993
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 188 )

[node name="OnGround" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Rolling" type="Node" parent="StateMachine"]
script = ExtResource( 191 )

[node name="OnAir" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="SpinDash" type="Node" parent="StateMachine"]
script = ExtResource( 1 )

[node name="Suspended" type="Node" parent="StateMachine"]
script = ExtResource( 185 )

[node name="Crouch" type="Node" parent="StateMachine"]
script = ExtResource( 189 )

[node name="LookUp" type="Node" parent="StateMachine"]
script = ExtResource( 190 )

[node name="Global" type="Node" parent="StateMachine"]
script = ExtResource( 193 )

[node name="Damage" type="Node" parent="StateMachine"]
script = ExtResource( 22 )

[node name="CollHandler" type="Node" parent="."]
script = ExtResource( 11 )

[node name="VFX" type="Node2D" parent="."]
position = Vector2( 0, -4 )
script = ExtResource( 7 )

[node name="ChargeDust" type="Sprite" parent="VFX"]
visible = false
position = Vector2( -19, 13 )
texture = ExtResource( 19 )
hframes = 14

[node name="AnimationPlayer" type="AnimationPlayer" parent="VFX/ChargeDust"]
anims/ChargeDust = SubResource( 1 )

[node name="InstaShield" type="Sprite" parent="VFX"]
visible = false
modulate = Color( 1, 1, 1, 0.5 )
position = Vector2( 0, 9 )
texture = ExtResource( 16 )
hframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="VFX/InstaShield"]
anims/InstaShield = SubResource( 2 )

[node name="Trail" type="Line2D" parent="VFX"]
width = 30.0
default_color = Color( 0.4, 0.501961, 1, 1 )
gradient = SubResource( 3 )
begin_cap_mode = 1
end_cap_mode = 2
script = ExtResource( 18 )
max_length = 20

[node name="Character" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sonic" parent="Character" instance=ExtResource( 4 )]
character_values = SubResource( 32 )

[node name="AudioPlayer" type="Node" parent="."]
script = ExtResource( 17 )
audios = {
"brake": ExtResource( 15 ),
"drop_dash_charge": ExtResource( 109 ),
"grab": ExtResource( 186 ),
"hurt": ExtResource( 162 ),
"hyper_ring": ExtResource( 164 ),
"insta_shield": ExtResource( 13 ),
"jump": ExtResource( 192 ),
"peel_out_charge": ExtResource( 8 ),
"peel_out_release": ExtResource( 14 ),
"ring": ExtResource( 131 ),
"ring_loss": ExtResource( 163 ),
"spike_hurt": ExtResource( 161 ),
"spin": ExtResource( 6 ),
"spin_dash_charge": ExtResource( 9 ),
"spin_dash_release": ExtResource( 10 ),
"spring": ExtResource( 120 )
}

[node name="MainCollider" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 31 )

[node name="RightWallSensor" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 12, 0 )
collision_mask = 481

[node name="LeftWallSensor" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -12, 0 )
collision_mask = 481

[node name="RightWallSensorBottom" type="RayCast2D" parent="."]
position = Vector2( 0, 5 )
enabled = true
cast_to = Vector2( 12, 0 )
collision_mask = 481

[node name="LeftWallSensorBottom" type="RayCast2D" parent="."]
position = Vector2( 0, 5 )
enabled = true
cast_to = Vector2( -12, 0 )
collision_mask = 481

[node name="GroundSensors" type="Node2D" parent="."]

[node name="LeftGroundSensor" type="RayCast2D" parent="GroundSensors"]
modulate = Color( 0.0901961, 1, 0.0117647, 1 )
position = Vector2( -9, 0 )
enabled = true
collision_mask = 33

[node name="MiddleGroundSensor" type="RayCast2D" parent="GroundSensors"]
modulate = Color( 0.0901961, 1, 0.0117647, 1 )
enabled = true
collision_mask = 33

[node name="RightGroundSensor" type="RayCast2D" parent="GroundSensors"]
modulate = Color( 0.0901961, 1, 0.0117647, 1 )
position = Vector2( 9, 0 )
enabled = true
collision_mask = 33

[node name="AttackBox" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 8
monitoring = false
monitorable = false

[node name="hitbox" type="CollisionShape2D" parent="AttackBox"]
modulate = Color( 1, 0.870588, 0, 1 )

[node name="HitBox" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 8
monitorable = false

[node name="hitbox" type="CollisionShape2D" parent="HitBox"]
modulate = Color( 0.0392157, 0.960784, 0.788235, 1 )

[node name="CameraSpace" type="Node" parent="."]

[node name="PlayerCamera" parent="CameraSpace" instance=ExtResource( 187 )]
position = Vector2( 0, 0 )

[node name="ControlUnlockTimer" type="Timer" parent="."]
one_shot = true

[connection signal="character_changed" from="." to="StateMachine" method="_on_Player_character_changed"]
[connection signal="damaged" from="." to="." method="blink" binds= [ 2 ]]
[connection signal="draw" from="." to="StateMachine" method="_on_Player_draw"]
[connection signal="body_entered" from="AttackBox" to="CollHandler" method="_on_AttackBox_body_entered"]
[connection signal="body_entered" from="HitBox" to="CollHandler" method="_on_HitBox_body_entered"]
[connection signal="timeout" from="ControlUnlockTimer" to="." method="_on_ControlUnlockTimer_timeout"]
